[package]
name = "batscram"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] } # Or "native-tls"
regex = "1"
tokio = { version = "1", features = ["full"] } # if using async reqwest
serde_json = "1.0" # Only if you need to handle JSON specifically, not strictly for this.
url = "2" # For URL encoding the WhatsApp message

#reqwest = { version = "0.12", features = ["blocking", "json"] } # Using blocking for simplicity, async is also an option
#regex = "1.10"
#tokio = { version = "1", features = ["full"] } # Required for reqwest async, if you switch to async
#scraper = "0.18"
#url = "2.5" # Optional, not strictly needed for this specific logic
#lettre = "0.10.1"